--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
     branches:
     - main
 
+env:
+  AZURE_WEBAPP_NAME: yaniko-restaurant
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -25,4 +29,11 @@ jobs:
         run: dotnet build ./YanikoRestaurant.sln --configuration Release --no-restore
 
       - name: Publish
-        run: dotnet publish ./YanikoRestaurant.sln --configuration Release --no-build
+        run: dotnet publish ./YanikoRestaurant.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+
+      - name: Deployment
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
